Made high score page, end page and timer, timer needs penalty, bugs are shown

--- a/highScore.html
+++ b/highScore.html
@@ -14,10 +14,8 @@
           <h1 id="finalScore">High Scores</h1>
           <ul id="highScoresList"></ul>
           <a class="btn" href="/">Go Home</a>
-
-
-
-
+        </div>
+    </div>
     <script src="/highScore.js"></script>
 </body>
 </html>
