--- a/game.html
+++ b/game.html
@@ -9,10 +9,7 @@
     <link rel="stylesheet" href="./game.css" />
   </head>
   <body>
-    <header>
-      <span id="timer">Time Left: </span>
-    </header>
-    <div class="container">
+    <div class="container">    
       <div id="game" class="justify-center flex-column">
         <div id="hud">
           <div id="hud-item">
@@ -22,6 +19,10 @@
           <div id="hud-item">
             <p class="hud-prefix">Score</p>
             <h1 class="hud-text" id="score">0</h1>
+          </div>
+          <div id="hud-item">
+            <p class="hud-prefix">Time Left</p>
+            <h1 class="hud-text" id="timer"></h1>
           </div>
         </div>
         <h2 id="question">What is the answer to this question?</h2>
