--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="home" class="flex-center flex-column">
             <h1>Coding Quiz</h1>
             <a class="btn" href="./game.html">Start</a>
-            <a class="btn" href="./yourScore.html">Your Score</a>
+            <a class="btn" href="./highScore.html">High Score</a>
         </div>
     </div>
     
